css fix. menu spacing
git-svn-id: https://plugins.svn.wordpress.org/responsive-tabs/trunk@1149715 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/rtbs_style.css
+++ b/css/rtbs_style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-.rtbs .rtbs_menu ul {list-style:none; padding:0; margin:0;}
+.rtbs .rtbs_menu ul {list-style:none; padding:0; margin:0 !important;}
 .rtbs .rtbs_menu li {display:inline-block; padding:0; margin-left:0; margin-bottom:0px;}
 
 .rtbs .rtbs_menu li a {display:inline-block; color:#333; text-decoration: none; padding: 0.7rem 30px;}
